# agfs

./: .gitignore  CLAUDE.md  COMPARISON.md  LARGE_SCALE_BENCHMARK.md  PERFORMANCE_COMPARISON.md  README.md  agfs-server.service  bench.sh  benchmark-agfs.sh  ctest.sh  ctxfs-server.service  install.sh  python-sdk  start-agfs.sh  start-openviking.sh  stop-agfs.sh  test-config.yaml  test-production.sh
.claude/: settings.json  task_completed.sh  teammate_idle.sh
.claude/hooks/: delete_go_src.sh  phase_complete.sh  task_completed.sh  teammate_idle.sh
.github/workflows/: daily-build.yml
.openviking-integration/: FINAL_REPORT.md  PLAN.md  phase0_report.md  phase1_analysis.md
.rust-rewrite/: FAKE_IMPLEMENTATIONS.md  PHASES.md  TEAM_ROSTER.md
.rust-rewrite/reports/: FINAL.md  RUST_REWRITE_COMPLETE.md  TEMPLATE_done.md  phase8_integration.md  plugin-basic_done.md  plugin-stream_done.md
.rust-rewrite/team/core/: discussion.md
.rust-rewrite/team/phase0/: task.md
.rust-rewrite/team/plugin-basic/: discussion.md  task.md
.rust-rewrite/team/server/: discussion.md
.rust-rewrite/team/storage/: discussion.md  task.md
.rust-rewrite/team/template/: discussion.md  task.md
agfs-fuse/: go.mod
agfs-fuse/pkg/fusefs/: handles.go
agfs-sdk/go/: README.md  client.go  client_test.go
agfs-server/: Dockerfile  README.md  agfs-server.service  api.md  docker-entrypoint.sh
agfs-server/cmd/server/: main.go
agfs-server/examples/agfs-wasm-ffi/: README.md
agfs-server/examples/agfs-wasm-ffi/src/: host_http.rs  lib.rs
agfs-server/examples/hackernewsfs-wasm/: Cargo.toml  Makefile  README.md
agfs-server/examples/hackernewsfs-wasm/src/: lib.rs
agfs-server/examples/hellofs-wasm-cpp/agfs-cpp-sdk/: agfs.h  agfs_http.h  example_http.cpp
agfs-server/pkg/handlers/: handlers.go
agfs-server/pkg/mountablefs/: mountablefs.go
agfs-server/pkg/plugin/api/: host_http.go
agfs-server/pkg/plugin/loader/: wasm_loader.go
agfs-server/pkg/plugins/httpfs/: README.md
agfs-server/pkg/plugins/localfs/: README.md
agfs-server/pkg/plugins/s3fs/: README.md  client.go  s3fs.go
agfs-server/pkg/plugins/sqlfs/: README.md
agfs-server/pkg/plugins/sqlfs2/: sqlfs2.go
agfs-server/pkg/plugins/streamfs/: README.md
agfs-server/pkg/plugins/vectorfs/: README.md  embeddings.go  indexer.go  tidb_client.go  vectorfs.go
agfs-shell/: README.md  build.py  pyproject.toml
agfs-shell/agfs_shell/: __init__.py  builtins.py  exit_codes.py  filesystem.py  pipeline.py  shell.py
agfs-shell/agfs_shell/commands/: fsgrep.py
docs/: BENCHMARK_REPORT.md  OPENVIKING_INTEGRATION.md  TESTING.md
docs/dev/: CLAUDE.md  LEADER_PROMPT.md
docs/dev/reports/: core_done.md  server_done.md
docs/dev/team/core/: task.md
docs/dev/team/phase0/: discussion.md
docs/dev/team/server/: task.md
docs/dev/team/storage/: discussion.md  task.md
rust-src/: .clippy.toml  Cargo.toml  Dockerfile  rustfmt.toml
rust-src/.github/workflows/: rust.yml
rust-src/agfs-fuse/: Cargo.toml
rust-src/agfs-fuse/src/: cache.rs  fusefs.rs  handles.rs  lib.rs  main.rs  node.rs
rust-src/agfs-sdk/: Cargo.toml
rust-src/agfs-sdk/src/: client.rs  error.rs  filesystem.rs  lib.rs  plugin.rs  types.rs
rust-src/agfs-server/: Cargo.toml
rust-src/agfs-server/src/: config.rs  lib.rs  main.rs  mountablefs.rs  router.rs  traffic_monitor.rs
rust-src/agfs-server/src/handlers/: directories.rs  files.rs  grep.rs  handles.rs  mod.rs  operations.rs  plugins.rs  response.rs  system.rs
rust-src/agfs-server/src/plugins/: devfs.rs  empty.rs  gptfs.rs  hellofs.rs  httpfs.rs  kvfs.rs  localfs.rs  memfs.rs  mod.rs  proxyfs.rs  queuefs.rs  s3fs.rs  sqlfs.rs  sqlfs2.rs  streamfs.rs  streamrotatefs.rs  vectorfs.rs
rust-src/agfs-server/tests/: integration_test.rs
rust-src/python-sdk/python/: README.md
scripts/: init_workspace.sh  run-benchmarks.sh  spawn_teammate.sh  start-agfs.sh  stop-agfs.sh  stop-openviking.sh  team_status.sh
src/: Cargo.toml
src/.github/workflows/: rust.yml
src/.rust-rewrite/reports/: phase0_done.md
src/fuse/: CLAUDE.md  Cargo.toml
src/fuse/src/: cache.rs  fusefs.rs  handles.rs  lib.rs  main.rs  node.rs
src/mcp/: pyproject.toml
src/python-bindings/: Cargo.toml
src/python-bindings/src/: lib.rs
src/sdk/: CLAUDE.md  Cargo.toml
src/sdk/src/: client.rs  error.rs  filesystem.rs  lib.rs  types.rs
src/server/: CLAUDE.md  Cargo.toml
src/server/src/: lib.rs  main.rs  mountablefs.rs
src/server/src/handlers/: directories.rs  files.rs  grep.rs  handles.rs  mod.rs  operations.rs  response.rs
src/server/src/plugins/: devfs.rs  empty.rs  gptfs.rs  hellofs.rs  httpfs.rs  kvfs.rs  localfs.rs  memfs.rs  proxyfs.rs  queuefs.rs  s3fs.rs  sqlfs.rs  sqlfs2.rs  streamfs.rs  streamrotatefs.rs  vectorfs.rs
src/server/tests/: integration_test.rs
src/shell/: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  FSGREP_USAGE.md  README.md  pyproject.toml
tests/: README.md  run-all-tests.sh
