[workspace]
members = ["agfs-sdk", "agfs-server", "agfs-fuse"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
md-5 = "0.10"
regex = "1"
dashmap = "5"
arc-swap = "1"
chrono = { version = "0.4", features = ["serde"] }
bitflags = "2"
sqlx = { version = "0.7", features = ["sqlite", "mysql", "runtime-tokio-rustls"] }
aws-sdk-s3 = "1"
extism = "1"
radix_trie = "0.2"
uuid = { version = "1", features = ["v4", "v7"] }
