[workspace]
members = ["agfs-server", "agfs-sdk", "agfs-fuse"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AGFS Contributors"]
license = "MIT"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async utilities
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# HTTP framework
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "compression-zstd"] }
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hash
xxhash-rust = { version = "0.8", features = ["xxh3"] }
md5 = "0.7"

# Regex
regex = "1.10"

# Radix tree for path routing
radix_trie = "0.2"
matchit = "0.8"

# Concurrency
dashmap = "6.0"

# S3
aws-sdk-s3 = { version = "1.0", features = ["behavior-version-latest", "rustls"], default-features = false }
aws-config = { version = "1.0", features = ["behavior-version-latest", "rustls"], default-features = false }

# SQL
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "mysql", "postgres", "chrono"] }

# WASM
extism = { version = "1.0", features = ["http"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Testing
tokio-test = "0.4"
axum-test = "15.0"

# FUSE (Linux only)
nix = { version = "0.29", features = ["fs", "user"] }
