[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp"
version = "1.4.0"
description = "Model Context Protocol (MCP) server for CtxFS (Context File System)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "CtxFS authors" }
]
dependencies = [
    "beautifulsoup4",
    "requests",
    "pyctxfs>=1.4.0",
    "mcp>=0.9.0",
]

[tool.uv.sources]
pyctxfs = { path = "../agfs-sdk/python", editable = true }

[project.scripts]
mcp = "mcp.server:cli"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/mcp"]
