[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctxfs-shell"
dynamic = ["version"]
description = "CtxFS Shell - Unix-style pipeline support for CtxFS"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "CtxFS authors" }
]
dependencies = [
    "pyctxfs>=1.4.0",
    "rich",
    "jq",
    "llm",
    "pyyaml",
]

[project.optional-dependencies]
webapp = [
    "aiohttp>=3.9.0",
    "aiohttp-cors>=0.7.0",
]

[tool.uv.sources]
pyctxfs = { path = "../python-sdk/python", editable = true }

[project.scripts]
ctxfs = "shell.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["shell"]

[tool.hatch.version]
path = "shell/__init__.py"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pre-commit>=3.6.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.13",
]
